K8s/homelab/applications/workflows/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo
---
apiVersion: v1
kind: Namespace
metadata:
  name: learning
---
apiVersion: v1
kind: Namespace
metadata:
  name: workflows
