K8s/homelab/applications/workflows/workflows-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: workflows-route
  namespace: argo
spec:
  parentRefs:
  - name: cilium-gw
    namespace: gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  hostnames:
  - "workflows.k8s.z3cyber.tech"
  rules:
   - backendRefs:
      - name: workflows-argo-workflows-server
        port: 2746
        group: ''	
        kind: Service
        weight: 1	
     matches:	
        - path:	
            type: PathPrefix	
            value: /
